# gm-lyric-quiz

./: .gitignore  CMakeLists.txt  Makefile  NOTICE  README.md  lyric_format.py
src/: arena.h  clay.h  clay_renderer_raylib.c  clay_renderer_raylib.h  lyrics.c  lyrics.h  main.c
